<resources>
    <string name="app_name">Group6MiniProject1</string>
    <string name="welcome_image_description">welcome_image_description</string>
    <string name="team_work_all">Team work all</string>
    <string name="convallis">Convallis vitae, dictum justo, iaculus id,\nCras a ac augue netus egestas semper\nvarius facilisis id.</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="lets_sign_you_in">Lets Sign you In</string>
    <string name="welcome_back_nyou_have_been_missed">Welcome Back , \nYou have been missed</string>
    <string name="email_phone_amp_username"><![CDATA[Email ,phone & username]]></string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="let_s_register_naccount">Let\'s Register\nAccount</string>
    <string name="hello_user_you_have_na_greatful_journey">Hello user, you have\na greatful journey</string>
    <string name="name">Name</string>
    <string name="business_name">Business Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
</resources>