<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/welcome_image"
        android:contentDescription="@string/welcome_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:text="@string/team_work_all"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeImage" />

    <TextView
        android:id="@+id/welcomeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/convallis"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:textColor="#454242"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />


    <LinearLayout
        android:id="@+id/dotsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_shape"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_shape"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_shape"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_shape_blue"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:cornerRadius="5dp"
        android:backgroundTint="#000"
        android:padding="15dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dotsLayout" />

   <com.google.android.material.button.MaterialButton
       android:id="@+id/registerButton"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/register"
       app:cornerRadius="5dp"
       android:textColor="#FFFFFF"
       android:textStyle="bold"
       android:textSize="20sp"
       android:fontFamily="sans-serif-medium"
       android:letterSpacing="0.1"
       android:backgroundTint="#6e77f6"
       android:padding="16dp"
       app:layout_constraintTop_toBottomOf="@id/dotsLayout"
       app:layout_constraintStart_toEndOf="@+id/signInButton"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
